No.11 - Experience Resource

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65270,3 +65270,439 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr !important;
   }
 }
+
+._4whrzw {
+    max-width: 1320px !important;
+    margin: 0 auto !important;
+}
+
+._1nqxw3c {
+  -webkit-box-lines: nowrap !important;
+  padding: 0px !important;
+  margin: 0px !important;
+  list-style: none !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-wrap: nowrap !important;
+  -ms-flex-wrap: nowrap !important;
+  flex-wrap: nowrap !important;
+  overflow-x: auto !important;
+  overflow-y: hidden !important;
+  -ms-overflow-y: hidden !important;
+}
+
+._1eaes69 {
+  -webkit-flex: 0 0 auto !important;
+  -ms-flex: 0 0 auto !important;
+  flex: 0 0 auto !important;
+}
+
+._7yqyxg {
+  display: inline-block !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  -webkit-flex: 0 0 auto !important;
+  -ms-flex: 0 0 auto !important;
+  flex: 0 0 auto !important;
+}
+
+._pt3ip3y {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: #484848 !important;
+  text-decoration: none !important;
+}
+
+._36rlri {
+  display: inline-block !important;
+}
+
+@media (min-width: 744px) {
+  ._fftcd5 {
+    margin-top: 80px !important;
+  }
+  ._1hst5ub {
+    margin-top: 64px !important;
+  }
+}
+
+
+._dj903s {
+  -webkit-box-lines: multiple !important;
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: stretch !important;
+  -ms-flex-align: stretch !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: stretch !important;
+  align-items: stretch !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  -webkit-flex-wrap: wrap !important;
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+}
+
+._56cas6i {
+    position: relative !important;
+    width: 100% !important;
+    margin-left: 0% !important;
+    margin-right: 0% !important;
+}
+
+@media (min-width: 1128px) {
+  ._56cas6i {
+    width: 58.333333333333336% !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._56cas6i {
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 375px) {
+  ._56cas6i {
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._5ilrdp {
+    max-width: 600px !important;
+  }
+}
+
+._rhltx6 {
+  font-size: 40px !important;
+  font-weight: 800 !important;
+}
+
+._jf8vku {
+  font-size: 18px !important;
+  line-height: 28px !important;
+  font-weight: 400 !important;
+}
+
+._1plo99a {
+  font-size: 18px !important;
+  line-height: 28px !important;
+  font-weight: 400 !important;
+  display: inline !important;
+}
+
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+.a8jt5op[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.a8jt5op[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+._1plo99a {
+  font-size: 18px !important;
+  line-height: 28px !important;
+  font-weight: 400 !important;
+  display: inline !important;
+}
+._hgs47m {
+  display: table !important;
+  width: 100% !important;
+  border-spacing: 0px !important;
+}
+._1x0jb4k {
+  position: relative !important;
+  z-index: 2 !important;
+}
+._10ejfg4u {
+  display: table-cell;
+  width: 100% !important;
+  vertical-align: middle !important;
+}
+._np90lm {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid #ddd !important;
+  background-color: #fff !important;
+  outline: 0 !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform, background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 16px !important;
+  border-radius: 20px !important;
+  min-height: 40px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  width: 120px !important;
+}
+@media (hover: hover) {
+  ._np90lm:hover {
+    color: #000000 !important;
+    border-color: #000000 !important;
+  }
+}
+
+._1vwho579 {
+  display: block !important;
+  height: 0 !important;
+  overflow: hidden !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+  background-color: #f7f7f7 !important;
+  color: #222 !important;
+  border-color: #222 !important;
+}
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+._gor68n {
+  position: relative !important;
+  z-index: 1 !important;
+}
+
+._1sh8tod {
+  -webkit-box-pack: justify !important;
+  -ms-flex-pack: justify !important;
+  -webkit-justify-content: space-between !important;
+  justify-content: space-between !important;
+}
+
+@media (min-width: 744px) {
+  ._qmx5s9 {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+}
+
+._eie8gyn {
+  -ms-grid-columns: 1fr 1fr 1fr !important;
+  display: -ms-grid !important;
+  display: grid !important;
+  grid-row-gap: 3rem !important;
+  grid-column-gap: 2rem !important;
+  grid-template-columns: 1fr 1fr 1fr !important;
+  -ms-grid-columns: 1fr 1fr 1fr !important;
+}
+
+
+._1tdgoer {
+    -ms-grid-column-span: 1 !important;
+}
+
+._1tdgoer:nth-child(1) {
+    -ms-grid-column: 1 !important;
+    -ms-grid-row: 1 !important;
+}
+
+@media (min-width: 744px) {
+  ._1tdgoer:nth-child(1) {
+    -ms-grid-column: 1 !important;
+    -ms-grid-row: 1 !important;
+  }
+  ._1tdgoer {
+    -ms-grid-column-span: 1 !important;
+  }
+}
+
+._1yfus1e {
+  height: 100% !important;
+}
+
+._za5sya {
+  height: 100% !important;
+  background: #ffffff !important;
+  position: relative !important;
+}
+
+._131n1yh {
+  background: transparent !important;
+  border: none !important;
+  color: inherit !important;
+  cursor: pointer !important;
+  display: block !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+}
+
+._w57qiaq {
+    width: 100% !important;
+    padding-top: 100% !important;
+    position: relative !important;
+    background: #ffffff !important;
+}
+
+@media (min-width: 1128px) {
+  ._w57qiaq {
+    padding-top: 56.3% !important;
+  }
+}
+
+._woxasv {
+  margin-top: 16px !important;
+  width: 100% !important;
+}
+._3uk7gk {
+  position: absolute !important;
+  height: 100% !important;
+  width: 100% !important;
+  top: 0px !important;
+  left: 0px !important;
+  border-radius: 8px !important;
+  overflow: hidden !important;
+}
+._1h6n1zu {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._9ofhsl {
+    height: 0px !important;
+    width: 0px !important;
+    position: absolute !important;
+}
+
+@supports (object-fit: cover) {
+  ._9ofhsl {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+
+._15p4g025 {
+    display: inline-block !important;
+    vertical-align: bottom !important;
+    height: 100% !important;
+    width: 100% !important;
+    background-position: 50% 50% !important;
+    background-repeat: no-repeat !important;
+}
+
+@supports (object-fit: cover) {
+  ._15p4g025 {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+
+._1krn6yg {
+    font-size: 16px !important;
+    line-height: 24px !important;
+    font-weight: 800 !important;
+    color: #222222 !important;
+}
+
+@media (min-width: 1128px) {
+  ._1krn6yg {
+    font-size: 18px !important;
+    line-height: 28px !important;
+}
+}
+
+
+._1t6yvad {
+    line-height: 20px !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2 !important;
+    -webkit-box-orient: vertical !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    color: #717171 !important;
+}
+
+@media (min-width: 1128px) {
+  ._1t6yvad {
+    font-size: 16px !important;
+    line-height: 24px !important;
+  }
+}
+
+@supports (overflow: clip) {
+  ._1t6yvad {
+    overflow: clip !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._14xl7yu {
+    margin-top: 16px !important;
+  }
+}
+
+
+._17pnx6f {
+    font-size: 14px !important;
+    line-height: 20px !important;
+    font-weight: 400 !important;
+    color: #717171 !important;
+    display: inline-block !important;
+}
+
+@media (min-width: 1128px) {
+  ._17pnx6f {
+    font-size: 16px !important;
+    line-height: 24px !important;
+  }
+}
+
+._1w9pxb9 {
+  z-index: 1 !important;
+  opacity: 0.8 !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  -webkit-transform: translate(-50%, -50%) !important;
+  -ms-transform: translate(-50%, -50%) !important;
+  transform: translate(-50%, -50%) !important;
+  border-radius: 50% !important;
+  background: #FFFFFF !important;
+}
