--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65706,3 +65706,124 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border-radius: 50% !important;
   background: #FFFFFF !important;
 }
+
+
+._ybk1kl0 {
+    z-index: 2000 !important;
+    position: fixed !important;
+    inset: 0px !important;
+    overflow-y: auto !important;
+    background: rgb(34, 34, 34) !important;
+    animation-duration: 400ms !important;
+    animation-iteration-count: 1 !important;
+    animation-fill-mode: both !important;
+    animation-name: keyframe_15p0df !important;
+}
+
+@media (min-width: 744px) {
+  ._ybk1kl0 {
+    background: transparent !important;
+  }
+}
+
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+
+
+._g2ext {
+    -webkit-box-pack: center !important;
+    -webkit-box-align: center !important;
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: horizontal !important;
+    z-index: 2000 !important;
+    position: fixed !important;
+    inset: 0px !important;
+    max-height: calc(var(--vh, 1vh) * 100) !important;
+    padding: 12px !important;
+    display: flex !important;
+    flex-direction: row !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+@media (min-height: 600px) {
+  ._g2ext {
+    padding-top: 96px !important;
+    padding-bottom: 96px !important;
+  }
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._g2ext {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }  
+}
+
+._ewwxwe {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  width: 400px !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  overflow: hidden !important;
+}
+
+._12kfhdn {
+  padding: 24px !important;
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  outline: none !important;
+}
+
+._1jcr8ov {
+  padding: 8px !important;
+  font-size: 16px !important;
+  color: rgb(34, 34, 34) !important;
+}
+._36rlri {
+  display: inline-block !important;
+}
+._10ndlvp {
+  position: relative !important;
+  display: inline-block !important;
+  cursor: pointer !important;
+  padding: 0px !important;
+}
+._1yf4i4f {
+  position: absolute !important;
+  opacity: 0 !important;
+}
+._41yoza {
+  display: inline-block !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(176, 176, 176) !important;
+  height: 24px !important;
+  width: 24px !important;
+  background: rgb(255, 255, 255) !important;
+  text-align: center !important;
+  overflow: hidden !important;
+  vertical-align: top !important;
+  border-radius: 4px !important;
+}
+._1jcr8ov {
+  padding: 8px !important;
+  font-size: 16px !important;
+  color: rgb(34, 34, 34) !important;
+}
