No.12 - Article Done

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65827,3 +65827,253 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 16px !important;
   color: rgb(34, 34, 34) !important;
 }
+
+._15mi62nr {
+    position: relative !important;
+    width: 100% !important;
+    margin-left: 0% !important;
+    margin-right: 0% !important;
+}
+
+@media (min-width: 1128px) {
+  ._15mi62nr {
+    width: 33.33333333333333% !important;
+    margin-left: 8.333333333333332% !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._mnhnkt {
+    padding-block: 32px !important;
+    height: 100% !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._1kd3vyi {
+    position: -webkit-sticky !important;
+    position: sticky !important;
+    top: 80px !important;
+  }
+}
+
+._152qbzi {
+  margin-bottom: 24px !important;
+}
+
+._orqpgh {
+  border: 1px solid !important;
+  border-color: #DDDDDD !important;
+  color: #222222 !important;
+  padding: 32px 32px 16px 32px !important;
+}
+
+._1sf10rg {
+  position: relative !important;
+  display: inline-block !important;
+  top: 4px !important;
+}
+
+._l3ubg1 {
+  padding-left: 20px !important;
+}
+
+._6yye0b {
+  color: #222222 !important;
+  font-size: 18px !important;
+  line-height: 28px !important;
+}
+
+._36rlri {
+  display: inline-block !important;
+}
+
+._egxdnj {
+  font-size: 22px !important;
+  line-height: 26px !important;
+  font-weight: 600 !important;
+  color: #222222 !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+
+._cntgei {
+    margin-bottom: 40px !important;
+    margin-top: 32px !important;
+}
+
+@media (min-width: 1128px) {
+  ._cntgei {
+    max-width: 600px !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._cntgei {
+    margin-top: 80px !important;
+  }
+}
+
+._11ry7lz {
+  color: #222222 !important;
+}
+
+
+@media (min-width: 744px) {
+  ._vfwjg3 {
+    margin-bottom: 24px !important;
+  }
+}
+
+._11v21t9 {
+  font-size: 14px !important;
+  line-height: 24px !important;
+  color: #717171 !important;
+  margin-bottom: 16px !important;
+}
+
+._p3iv50 {
+  margin-bottom: 48px !important;
+}
+
+
+._1xi2lcs {
+    font-size: 32px !important;
+    line-height: 36px !important;
+    font-weight: 800 !important;
+}
+
+@media (min-width: 744px) {
+  ._1xi2lcs {
+    font-size: 40px !important;
+    line-height: 1.15 !important;
+  }
+}
+
+._1bx7dqg {
+  font-size: 26px !important;
+  line-height: 30px !important;
+}
+
+._11v21t9 {
+  font-size: 14px !important;
+  line-height: 24px !important;
+  color: #717171 !important;
+  margin-bottom: 16px !important;
+}
+
+._36rlri {
+  display: inline-block !important;
+}
+
+._76wic2 {
+  margin-right: 16px !important;
+  display: inline-block !important;
+}
+
+._11eqlma4 {
+  cursor: pointer !important;
+  position: relative !important;
+  border-color: black !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
+  font-weight: inherit !important;
+  border-radius: 0px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding-top: 14px !important;
+  padding-bottom: 14px !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  -webkit-transition: box-shadow 0.2s ease, -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -moz-transition: box-shadow 0.2s ease, transform 0.1s ease !important;
+  transition: box-shadow 0.2s ease, -ms-transform 0.1s ease, -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -webkit-tap-highlight-color: transparent !important;
+  background: transparent !important;
+  border: none !important;
+  color: inherit !important;
+  display: block !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+._onao3d {
+  font-size: 32px !important;
+  line-height: 36px !important;
+  font-weight: 800 !important;
+}
+
+@media (min-width: 1128px) {
+  ._56cas6i {
+    width: 58.333333333333336% !important;
+  }
+}
+
+._6yye0b {
+  color: #717171 !important;
+  font-weight: 100 !important;
+}
+
+
+._36rlri {
+  display: inline-block !important;
+}
+
+._1ynkfbb {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 0px !important;
+  border: 1px solid #D8D8D8 !important;
+  outline: 0 !important;
+  margin: 0px !important;
+  padding: 12px 15px !important;
+  color: #D8D8D8 !important;
+  background-color: transparent !important;
+  cursor: pointer !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+}
+
+._50mnu4 {
+  margin-bottom: 40px !important;
+}
+
+._1rv2q5d {
+  color: #222222 !important;
+  font-size: 16px !important;
+  display: inline-block !important;
+}
+
+._194mu2a {
+  font-size: 26px !important;
+  line-height: 30px !important;
+  font-weight: 800 !important;
+  color: #222222 !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
