No.13 - New Page > Experience Resource > Video

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66227,3 +66227,34 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   vertical-align: middle !important;
   margin-right: 0 !important;
 }
+
+._efcs0 {
+    width: 100% !important;
+    background: #000000 !important;
+}
+
+._4whrzw {
+  max-width: 1320px !important;
+  margin: 0 auto !important;
+}
+
+@media (min-width: 744px) {
+  ._bxmz9yn {
+    margin-right: 80px !important;
+    margin-left: 80px !important;
+  }
+}
+
+._zxc7gz {
+  width: 100% !important;
+  position: relative !important;
+  padding-top: 56.25% !important;
+}
+
+._v05wf2 {
+  width: 100% !important;
+  position: absolute !important;
+  height: 100% !important;
+  left: 0px !important;
+  top: 0px !important;
+}
