--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -855,6 +855,10 @@ template {
     column-gap: 0
 }
 
+.row:after, .row:before {
+    content: none;
+}
+
 .col-full {
     grid-column-start: 1;
     grid-column-end: -1
