--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -16454,7 +16454,7 @@ full__margin-bottom {
   border: 0;
   cursor: pointer;
 }
-.mobileMenu__searchFormWrap {
+.relative {
   position: relative;
 }
 .mobileMenu__searchForm {
@@ -52081,7 +52081,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._oda838 {
@@ -59293,7 +59293,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._oda838 {
@@ -60496,7 +60496,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._oda838 {
@@ -61836,7 +61836,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._oda838 {
@@ -63479,7 +63479,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
   pointer-events: none !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._oda838 {
@@ -64683,7 +64683,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
 }
 
-._e296pg {
+.relative {
   position: relative !important;
 }
 
@@ -67605,7 +67605,7 @@ img {
     cursor: pointer
 }
 
-.mobileMenu__searchFormWrap {
+.relative {
     position: relative
 }
 
@@ -70531,7 +70531,7 @@ img {
     width: 100%
 }
 
-.topBar__searchFormWrap {
+.relative {
     position: relative
 }
 
