--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63634,7 +63634,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: table-cell !important;
   vertical-align: middle !important;
 }
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 ._jro6t0 {
@@ -65320,7 +65320,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-decoration: none !important;
 }
 
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 
@@ -65796,7 +65796,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 16px !important;
   color: rgb(34, 34, 34) !important;
 }
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 ._10ndlvp {
@@ -65884,7 +65884,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 28px !important;
 }
 
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 
@@ -65970,7 +65970,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-bottom: 16px !important;
 }
 
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 
@@ -66031,7 +66031,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 
