--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52983,7 +52983,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     justify-content: space-between !important;
   }
 }
-._jro6t0 {
+.flex {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -63637,7 +63637,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .inline-block {
   display: inline-block !important;
 }
-._jro6t0 {
+.flex {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
