--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -37760,7 +37760,7 @@ a:hover {
   flex-direction: column !important;
   height: 100% !important;
 }
-.place__recommended-section {
+.mb-10 {
   margin-bottom: 40px !important;
 }
 ._1mke8tr {
@@ -66052,7 +66052,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   touch-action: manipulation !important;
 }
 
-._50mnu4 {
+.mb-10 {
   margin-bottom: 40px !important;
 }
 
