--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -40201,7 +40201,7 @@ a:hover {
     justify-content: space-between !important;
   }
 }
-.site-content__header-text {
+.text-3xl {
   font-size: 32px !important;
   line-height: 36px !important;
   font-weight: 800 !important;
@@ -66013,7 +66013,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
 }
 
-._onao3d {
+.text-3xl {
   font-size: 32px !important;
   line-height: 36px !important;
   font-weight: 800 !important;
