--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63271,7 +63271,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.ocd8a5j[class][class] {
   margin-top: var(--jaa-ni-h);
 }
-._smt4n2a {
+.checkbox__input {
   position: absolute !important;
   opacity: 0 !important;
 }
@@ -63306,7 +63306,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: var(---s-l-myu);
   font-weight: var(--e-y-j-d-v-j);
 }
-._1yf4i4f {
+.checkbox__input {
   position: absolute !important;
   opacity: 0 !important;
 }
@@ -64992,7 +64992,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding: 0px !important;
 }
 
-._1yf4i4f {
+.checkbox__input {
   position: absolute !important;
   opacity: 0 !important;
 }
@@ -65114,7 +65114,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center !important;
 }
 
-._1yf4i4f {
+.checkbox__input {
   position: absolute !important;
   opacity: 0 !important;
 }
@@ -65805,7 +65805,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   cursor: pointer !important;
   padding: 0px !important;
 }
-._1yf4i4f {
+.checkbox__input {
   position: absolute !important;
   opacity: 0 !important;
 }
