rename flex for dir dir-ltr

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -8162,7 +8162,7 @@
 .dir.s1zug1q[class][class] {
   padding: 0 5px;
 }
-.r15cp21x[class][class] {
+.flex[class][class] {
   display: flex;
 }
 ._njezmzv {
@@ -8587,7 +8587,7 @@
 .d1dsjvyj[class][class]::-webkit-scrollbar {
   display: none;
 }
-.d10ugdmb[class][class] {
+.flex[class][class] {
   display: flex;
 }
 .d1i8eay0[class][class] {
@@ -9754,7 +9754,7 @@
     transition: none;
   }
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -49793,7 +49793,7 @@ video::cue {
   color: #000 !important;
   text-decoration: underline !important;
 }
-.lnq7699[class][class] {
+.flex[class][class] {
   display: flex;
 }
 .form__switch-label {
@@ -53788,7 +53788,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .l1aeurux[class][class] strong {
   font-weight: var(--jx-zk-pv);
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -55870,11 +55870,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   cursor: text;
 }
 
-.atm_9s_1txwivl {
+.flex {
   display: flex;
 }
 
-.atm_9s_1txwivl {
+.flex {
   display: flex;
 }
 
@@ -59833,7 +59833,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border: 0;
   padding: 0;
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -61051,7 +61051,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border: 0;
   padding: 0;
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -62487,7 +62487,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border: 0;
   padding: 0;
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -62929,7 +62929,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir.hpwdvd6[class][class] p {
   margin: var(--fgg-f-l-a) 0 var(--jaa-ni-h);
 }
-.caoewxn[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -63355,7 +63355,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  checkbox__inputjustify-content: space-between;
 }
 .dir.f1hzn9q9[class][class] {
   margin-top: var(--jaa-ni-h);
@@ -64074,7 +64074,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border: 0;
   padding: 0;
 }
-.c17y9q74[class][class] {
+.flex[class][class] {
   display: flex;
 }
 
@@ -64981,7 +64981,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding-bottom: 16px !important;
 }
 
-.atm_9s_1txwivl {
+.flex {
   display: flex;
 }
 
