--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64580,7 +64580,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: -1px !important;
 }
 
-._1ucy1zjv {
+.modal-dialog__content-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: vertical !important;
     background: rgb(255, 255, 255) !important;
@@ -64599,7 +64599,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     animation-name: keyframe_d37zz3 !important;
 }
 
-.hidden ._1ucy1zjv {
+.hidden .modal-dialog__content-wrapper {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   background: rgb(255, 255, 255) !important;
@@ -64619,7 +64619,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 744px) {
-  ._1ucy1zjv {
+  .modal-dialog__content-wrapper {
     width: 100% !important;
     max-width: 568px !important;
     border-radius: 12px !important;
@@ -65078,7 +65078,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   contain: paint !important;
 }
 
-._njcq40o {
+.modal-dialog__content-wrapper {
     -webkit-box-direction: normal !important;
     -webkit-box-orient: vertical !important;
     background: rgb(255, 255, 255) !important;
@@ -65100,7 +65100,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 744px) {
-  ._njcq40o {
+  .modal-dialog__content-wrapper {
     width: 100% !important;
     max-width: 568px !important;
     border-radius: 12px !important;
