--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64544,7 +64544,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 
-._z4lmgp {
+.contents {
   display: contents !important;
 }
 
@@ -64562,7 +64562,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: -1px !important;
 }
 
-._z4lmgp {
+.contents {
   display: contents !important;
 }
 
