--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64306,7 +64306,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     float: left !important;
   }
 }
-._n5lh69r {
+.va-top-h {
   display: table-cell !important;
   width: 100% !important;
   vertical-align: top !important;
