--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -54487,10 +54487,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative;
 }
 
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
 .dir.atm_r3_1h6ojuz {
   text-align: center;
 }
@@ -54856,14 +54852,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 
 .atm_vy_1osqo2v {
   width: 100%;
-}
-
-.atm_9s_1ulexfb {
-  display: block;
-}
-
-.atm_9s_1ulexfb {
-  display: block;
 }
 
 .dir.atm_705yyq_idpfg4:not(:focus) {
@@ -55590,14 +55578,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-duration: 0.8s;
 }
 
-.dir.atm_16_12c5xpv.atm_16_12c5xpv {
-  animation-iteration-count: infinite;
-}
-
-.dir.atm_16_12c5xpv.atm_16_12c5xpv {
-  animation-iteration-count: infinite;
-}
-
 .dir.atm_1k_p3knf3.atm_1k_p3knf3 {
   animation-timing-function: linear;
 }
@@ -55751,14 +55731,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   mask-image: -webkit-radial-gradient(white, black);
 }
 
-.atm_9s_1ulexfb {
-  display: block;
-}
-
-.atm_9s_1ulexfb {
-  display: block;
-}
-
 .atm_jb_uuw12j {
   min-width: 200px;
 }
@@ -55839,27 +55811,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transform: scale(5);
 }
 
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
 .atm_mj_glywfm {
   pointer-events: none;
 }
 
 .atm_mj_glywfm {
   pointer-events: none;
-}
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
-.atm_mk_h2mmj6 {
-  position: relative;
 }
 
 .dir.atm_9j_1kdvhqb {
@@ -57252,14 +57209,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin: 0;
 }
 
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
-.atm_mk_h2mmj6 {
-  position: relative;
-}
-
 .dir.atm_r3_1h6ojuz {
   text-align: center;
 }
@@ -57627,14 +57576,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100%;
 }
 
-.atm_9s_1ulexfb {
-  display: block;
-}
-
-.atm_9s_1ulexfb {
-  display: block;
-}
-
 .dir.atm_705yyq_idpfg4:not(:focus) {
   border: 0;
 }
@@ -57717,7 +57658,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 1px;
 }
 /* accessibility */
-._1lovwbn {
+.nav-bar {
   position: -webkit-sticky !important;
   position: sticky !important;
   top: 0px !important;
@@ -57737,7 +57678,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @supports (backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px)) {
-  ._1lovwbn {
+  .nav-bar {
     -webkit-backdrop-filter: blur(25px) saturate(140%) !important;
     backdrop-filter: blur(25px) saturate(140%) !important;
     background: rgba(255, 255, 255, 0.85) !important;
@@ -57745,13 +57686,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 744px) {
-  ._1lovwbn {
+  .nav-bar {
     height: 64px !important;
   }
 }
 
 @media (min-width: 1128px) {
-  ._1lovwbn {
+  .nav-bar {
     height: 72px !important;
   }
 }
@@ -58377,33 +58318,33 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: initial;
 }
 
-.c1pzwz3g[class][class] {
+.padding-x-80[class][class] {
   width: 100%;
   height: inherit;
 }
 
-.dir.c1pzwz3g[class][class] {
+.dir.padding-x-80[class][class] {
   margin: auto;
   padding-right: var(--ikx-k-pe);
   padding-left: var(--ikx-k-pe);
 }
 
 @media (min-width:744px) {
-  .dir.c1pzwz3g[class][class] {
+  .dir.padding-x-80[class][class] {
     padding-right: var(--f-fw-z-a-i);
     padding-left: var(--f-fw-z-a-i);
   }
 }
 
 @media (min-width:1128px) {
-  .dir.c1pzwz3g[class][class] {
+  .dir.padding-x-80[class][class] {
     padding-right: var(--cy-o-aco);
     padding-left: var(--cy-o-aco);
   }
 }
 
 @media (min-width:1440px) {
-  .c1pzwz3g[class][class] {
+  .padding-x-80[class][class] {
     max-width: 1440px;
   }
 }
@@ -71067,3 +71008,374 @@ img {
         visibility: visible
     }
 }
+
+
+/* loader */
+
+.dir.f1xx50dm[class][class] {
+  padding: 0 var(--lilsearch-field_padding-inline);
+}
+.f1xx50dm[class][class] {
+  font-size: var(--c-zdwk-p);
+  line-height: var(--j-p-z-kco);
+  font-weight: var(--jx-zk-pv);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  flex: 1 1 auto;
+  min-width: var(--lilsearch-field-text_min-width,0);
+}
+
+.dir.atm_2d_1r31cwp.atm_2d_1r31cwp {
+  background-color: currentColor;
+}
+
+.dir.atm_1k_1ytfnp0.atm_1k_1ytfnp0 {
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes animation-64e8c8 {
+  0% {
+    opacity: 0.09049773755656108;
+  }
+  100% {
+    opacity: 0.15384615384615385;
+  }
+}
+
+.dir.atm_16_12c5xpv.atm_16_12c5xpv {
+  animation-iteration-count: infinite;
+}
+
+.dir.atm_y_9cwzv5.atm_y_9cwzv5 {
+  animation-duration: 1s;
+}
+
+.dir.atm_u_1yy80mb.atm_u_1yy80mb {
+  animation-direction: alternate;
+}
+
+.cbdpsi8[class][class] {
+  display: grid;
+  overflow: hidden;
+  overflow: clip;
+  grid-template-columns: minmax(0,1fr);
+}
+
+.rztl681[class][class] {
+  display: grid;
+  grid-template:
+      var( --contentscroller_layout_grid-template,
+      'header'
+      'scroller'
+      'footer' / minmax(0,1fr) );
+}
+.rztl681[class][class] {
+  display: grid;
+  grid-template:
+      var( --contentscroller_layout_grid-template,
+      'header'
+      'scroller'
+      'footer' / minmax(0,1fr) );
+}
+
+
+.dir.dbldy2s[class][class] {
+  border: 0;
+  padding: 0;
+}
+.dir.dbldy2s[class][class] {
+  border: 0;
+  padding: 0;
+}
+.dbldy2s[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.dbldy2s[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.dir.p1rmpakb[class][class] {
+  background: var(--f-mkcy-f);
+  transform: translateX(0);
+}
+.cbdpsi8[class][class] > :nth-child(n) {
+  grid-area: 1 / 1 / -1 / -1;
+  height: 100%;
+}
+.p1rmpakb[class][class] {
+  overflow: hidden;
+  overflow: clip;
+  will-change: transform;
+}
+.dir.p3wm8pa[class][class] {
+  transform: translateX(0%);
+}
+.p3wm8pa[class][class] {
+  will-change: transform;
+}
+.dir.p14wfpb5[class][class] {
+  /* -webkit-padding-start: var(--contentscroller_peek);
+  padding-inline-start: var(--contentscroller_peek); */
+}
+.p14wfpb5[class][class] {
+  align-items: center;
+  display: flex;
+  gap: var(--chipsbar_chip-spacing);
+  pointer-events: none;
+}
+.p14wfpb5 .cmrodwo[class][class] {
+  display: flex;
+  flex-direction: row;
+  padding-block: 0 16px !important;
+  padding-bottom: 0 !important;
+}
+
+@media (min-width: 744px) {
+  .p14wfpb5 .cmrodwo[class][class] {
+    gap: none !important;
+  }
+}
+
+.c6db4u2[class][class] {
+    --shimer-image_size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-block: 18px 16px;
+    gap: var(--h-x-sf-jw);
+}
+
+@media (min-width: 744px) {
+  .c6db4u2[class][class] {
+    gap: var(--fgg-f-l-a);
+    -webkit-padding-after: 12px;
+    padding-block-end: 12px;
+  }
+}
+
+.i1g6c6ad[class][class] {
+    flex-shrink: 0;
+    width: var(--shimer-image_size,24px);
+    height: var(--shimer-image_size,24px);
+}
+
+@media (min-width: 950px) {
+  .i1g6c6ad[class][class] {
+    --shimer-image_size: 28px;
+  }
+}
+
+.dir.atm_1c_glywfm.atm_1c_glywfm {
+  animation-name: none;
+}
+
+.dir.atm_12_q7pw6w.atm_12_q7pw6w {
+  animation-fill-mode: forwards;
+}
+
+.atm_k4_7tcf61 {
+  opacity: 0.09049773755656108;
+}
+
+.atm_9s_1ulexfb {
+    display: block;
+}
+
+.dir.c1pbo4kt[class][class] {
+  margin: 0;
+  padding-top: 0;
+}
+
+.c1pbo4kt[class][class] {
+  flex-direction: column;
+  grid-area: 1 / 1 / 2 / 2;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 2;
+}
+
+.l179zchc[class][class] {
+  visibility: visible;
+  content-visibility: visible;
+  opacity: 1;
+}
+
+.dir.m1cp3yuo[class][class] {
+  margin-bottom: var(--b-y-unon);
+}
+.m1cp3yuo[class][class] {
+  --aspect_ratio_wrapper-ratio: 20 / 19;
+  --aspect_ratio_wrapper-padding_fallback: 95%;
+  --aspect_ratio_wrapper-position_fallback: relative;
+}
+
+@supports (aspect-ratio:1 / 1) {
+  .awuxh4x[class][class] {
+    aspect-ratio: var(--aspect_ratio_wrapper-ratio,unset);
+  }
+}
+
+.cw9aemg[class][class] {
+  height: 100%;
+  min-width: 0;
+  position: unset;
+}
+
+.cb4nyux[class][class] {
+  display: grid;
+  grid-gap: var(--card-content-grid_gap,var(--h-x-sf-jw));
+  gap: var(--card-content-grid_gap,var(--h-x-sf-jw));
+  grid-template-columns: var( --card-content-grid_template-columns, minmax(0,1fr) -webkit-max-content );
+  grid-template-columns: var( --card-content-grid_template-columns, minmax(0,1fr) max-content );
+  grid-template-rows: var(--card-content-grid_template-rows,unset);
+}
+
+.g1wiliwt[class][class] {
+  --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
+  --card-content-grid_template-columns: minmax(0,1fr) 15%;
+}
+
+.a3g92ry[class][class] {
+  grid-column: -2/-1;
+  grid-row: 1;
+  justify-self: end;
+  width: 100%;
+}
+
+.f15liw5s[class][class] {
+  grid-column: 1 / -1;
+}
+
+.dir.pc0djro[class][class] {
+  margin-top: 6px;
+}
+.pc0djro[class][class] {
+  grid-column: 1 / -1;
+}
+
+._1ltqfox {
+  background: rgb(255, 255, 255) !important;
+  inset: 0px !important;
+  opacity: 1 !important;
+  position: absolute !important;
+  transition: opacity 300ms ease-out 0s !important;
+}
+
+.h1a2w4o2[class][class] {
+  visibility: hidden;
+}
+
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+.a8jt5op[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+._8od0vn4 {
+  background-color: rgb(255, 255, 255) !important;
+  width: 6px !important;
+  height: 6px !important;
+  margin-right: 4px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  animation-name: keyframe_1fk160q !important;
+  animation-duration: 0.8s !important;
+  animation-iteration-count: infinite !important;
+  animation-timing-function: linear !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  animation-delay: -0.3s !important;
+}
+
+._xeg0rs5 {
+  background-color: rgb(255, 255, 255) !important;
+  width: 6px !important;
+  height: 6px !important;
+  margin-right: 4px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  animation-name: keyframe_1fk160q !important;
+  animation-duration: 0.8s !important;
+  animation-iteration-count: infinite !important;
+  animation-timing-function: linear !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  animation-delay: -0.15s !important;
+}
+
+._1j74bfux {
+  background-color: rgb(255, 255, 255) !important;
+  width: 6px !important;
+  height: 6px !important;
+  border-radius: 100% !important;
+  display: inline-block !important;
+  animation-name: keyframe_1fk160q !important;
+  animation-duration: 0.8s !important;
+  animation-iteration-count: infinite !important;
+  animation-timing-function: linear !important;
+  animation-fill-mode: both !important;
+  vertical-align: middle !important;
+  margin-right: 0px !important;
+}
+
+@keyframes keyframe_1fk160q {
+  0%, 80%, 100% {
+    opacity: 0;
+  }
+  30%, 50% {
+    opacity: 1;
+  }  
+}
+
+.portrait-listings-grid-card-container ._l7ztla,
+.explore__list-full-wh ._l7ztla,
+.explore__container-list ._l7ztla {
+  opacity: 0 !important;
+  transition: 300ms ease-out;
+}
+
+.portrait-listings-grid-card-container:hover ._l7ztla,
+.explore__list-full-wh:hover ._l7ztla,
+.explore__container-list:hover ._l7ztla {
+  opacity: 1 !important;
+}
+
+/* .card-portrait__media ._l7ztla {
+  opacity: 0 !important;
+  visibility: hidden !important;
+} */
+
+/* @media (hover: hover) {
+  ._1ltqfox ._l7ztla {
+    opacity: 1 !important;
+    visibility: visible !important;
+  }
+} */
