--- a/messages.css
+++ b/messages.css
@@ -2449,3 +2449,97 @@
   }
 }
 
+._x6sr1rm {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: auto !important;
+  overflow: hidden !important;
+  display: flex !important;
+  flex-direction: column !important;
+  transition-property: all !important;
+  transition-duration: 0.5s !important;
+  transition-delay: 0s !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+  border-image: initial !important;
+}
+
+@media (min-width: 375px) {
+  ._x6sr1rm {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: transparent transparent transparent rgb(235, 235, 235) !important;
+    border-image: initial !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._x6sr1rm {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    height: auto !important;
+    overflow: hidden !important;
+    display: flex !important;
+    flex-direction: column !important;
+    transition-property: all !important;
+    transition-duration: 0.5s !important;
+    transition-delay: 0s !important;
+    border-top: 1px solid transparent !important;
+    border-right: 1px solid transparent !important;
+    border-bottom: 1px solid transparent !important;
+    border-image: initial !important;
+    flex: 0 1 0% !important;
+    border-left: none !important;
+  }
+}
+
+@media (min-width: 744px),
+@supports (--custom: properties) {
+  ._x6sr1rm {
+    flex: 0 1 0% !important;
+  }
+}
+
+._ijm3lbp {
+  height: 100% !important;
+  overflow: hidden !important;
+}
+
+@media (min-width: 375px) {
+  ._ijm3lbp {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._ijm3lbp {
+    height: 100% !important;
+    overflow: hidden !important;
+    opacity: 1 !important;
+    transition-duration: 150ms !important;
+    transition-delay: 350ms !important;
+  }
+}
+
+._61mw08 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  position: relative !important;
+  display: flex !important;
+  flex-direction: row !important;
+  height: 100% !important;
+  overflow: hidden !important;
+}
+
+#translation-modal
