--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -71264,6 +71264,7 @@ img {
   }  
 }
 
+.explore-grouped-listings-carousel-item ._l7ztla,
 .portrait-listings-grid-card-container ._l7ztla,
 .explore__list-full-wh ._l7ztla,
 .explore__container-list ._l7ztla {
@@ -71271,6 +71272,7 @@ img {
   transition: 300ms ease-out;
 }
 
+.explore-grouped-listings-carousel-item:hover ._l7ztla,
 .portrait-listings-grid-card-container:hover ._l7ztla,
 .explore__list-full-wh:hover ._l7ztla,
 .explore__container-list:hover ._l7ztla {
