fx no. all explore

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -71264,6 +71264,7 @@ img {
   }  
 }
 
+.portrait-listings-grid-card-container-mobile ._l7ztla,
 .explore-grouped-listings-carousel-item ._l7ztla,
 .portrait-listings-grid-card-container ._l7ztla,
 .explore__list-full-wh ._l7ztla,
@@ -71272,6 +71273,7 @@ img {
   transition: 300ms ease-out;
 }
 
+.portrait-listings-grid-card-container-mobile:hover ._l7ztla,
 .explore-grouped-listings-carousel-item:hover ._l7ztla,
 .portrait-listings-grid-card-container:hover ._l7ztla,
 .explore__list-full-wh:hover ._l7ztla,
