--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -71292,3 +71292,9 @@ img {
     visibility: visible !important;
   }
 } */
+
+.black-dots>._8od0vn4,
+.black-dots>._xeg0rs5,
+.black-dots>._1j74bfux{
+  background-color: rgb(0, 0, 0) !important;
+}
